# S2_Prog-Algo_PaulineC

./: README.md
TD1_PROG&ALGO_PaulineC/src/: main.cpp
TD1_PROG&ALGO_S2/src/: fraction.cpp  fraction.hpp  main.cpp  utils.cpp  utils.hpp
TD2_PROG&ALGO_S2/src/: exo1.cpp  exo1.hpp  exo2.cpp  exo2.hpp  main.cpp  utils.cpp
TD3_PROG&ALGO_S2/: CMakeLists.txt
TD3_PROG&ALGO_S2/src/: exo3.cpp  exo3.hpp  exo4.cpp  exo4.hpp  main.cpp  tris.cpp  tris.hpp
TD4_PROG&ALGO_S2/: CMakeLists.txt
TD4_PROG&ALGO_S2/src/: main.cpp  utils.cpp  utils.hpp
TD5_PROG&ALGO_S2/src/: exo1.cpp  exo1.hpp  exo2.cpp  exo2.hpp  exo3.cpp  exo3.hpp  main.cpp
TD6_PROG&ALGO_S2/: CMakeLists.txt
TD6_PROG&ALGO_S2/src/: main.cpp  node.cpp  node.hpp
TD7_PROG&ALGO_S2/: CMakeLists.txt
TD7_PROG&ALGO_S2/src/: graphe.cpp  graphe.hpp  main.cpp
src/: fraction.cpp  fraction.hpp
